# BookMarkManagement

./: .gitignore  IMPORT_INSTRUCTIONS.md  IMPORT_INSTRUCTIONS_v2.md  LICENSE  PRD.md  README.md  bookmarks_1_23_26.html  bookmarks_cleaned.html  clean_bookmarks.py  cleanup_bookmarks.py  cleanup_bookmarks_v2.py  favorites_3_17_26.html  favorites_3_17_26_cleaned.html  project-config.json  pyproject.toml  sort_bookmarks.py
.claude/: rules.md
.specify/: roadmap.md
.specify/memory/: constitution.md
.specify/specs/1-tree-model/: data-model.md  plan.md  research.md  spec.md  tasks.md
.specify/specs/1-tree-model/checklists/: requirements.md
.specify/specs/3-netscape-parser/: plan.md  research.md  spec.md  tasks.md
.specify/specs/3-netscape-parser/checklists/: requirements.md
.specify/specs/4-cleanup-operations/: data-model.md  plan.md  research.md  spec.md  tasks.md
.specify/specs/4-cleanup-operations/checklists/: requirements.md
.specify/templates/: checklist-template.md  constitution-template.md  plan-template.md  quickstart-template.md  research-template.md  roadmap-template.md  spec-template.md  tasks-template.md
src/bookmark_cleaner/: __init__.py  cli.py  models.py  normalize.py  operations.py  tree.py
src/bookmark_cleaner/parsers/: __init__.py  netscape.py
tests/: test_cli.py  test_models.py  test_normalize.py  test_operations.py  test_parsers.py  test_tree.py
tests/fixtures/: sample_bom.html  sample_entities.html  sample_nested.html  sample_no_href.html  sample_not_bookmarks.json  sample_simple.html
