[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark-cleaner"
version = "0.1.0"
description = "Clean, deduplicate, and organize browser bookmark files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["typer>=0.9", "rich>=13.0"]
authors = [{ name = "bookmark-cleaner contributors" }]
keywords = ["bookmarks", "browser", "cleanup", "dedup", "organize"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
bookmark-cleaner = "bookmark_cleaner.cli:app"

[project.urls]
Homepage = "https://github.com/bookmark-cleaner/bookmark-cleaner"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["bookmark_cleaner"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
